--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,16 +1,14 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.0'
-	id 'io.spring.dependency-management' version '1.1.6'
+	id 'org.springframework.boot' version '3.2.4'
+	id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'com.itwil'
+group = 'SSM'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
+	sourceCompatibility = '17'
 }
 
 configurations {
@@ -22,21 +20,28 @@ configurations {
 repositories {
 	mavenCentral()
 }
-
 dependencies {
+	/* Swagger 관련 의존성 */
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // Swagger UI를 사용하기 위한 OpenAPI 지원 라이브러리
 
-	/*swagger*/
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+	/* Spring Boot Starter */
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA 관련 의존성
+	implementation 'org.springframework.boot:spring-boot-starter-web' // Spring MVC 웹 애플리케이션 개발을 위한 의존성
+
+	/* Lombok */
+	compileOnly 'org.projectlombok:lombok' // Lombok 라이브러리
+	annotationProcessor 'org.projectlombok:lombok' // Lombok 애너테이션 프로세서 추가
+
+	/* 개발 환경 전용 의존성 */
+	developmentOnly 'org.springframework.boot:spring-boot-devtools' // 개발 중 자동 리로딩을 지원하는 DevTools
+
+	/* 데이터베이스 */
+	runtimeOnly 'com.oracle.database.jdbc:ojdbc11:21.9.0.0' // Oracle 데이터베이스 JDBC 드라이버 (런타임 전용)
+
+	/* 테스트 관련 의존성 */
+	testImplementation 'org.springframework.boot:spring-boot-starter-test' // JUnit 기반의 테스트 지원
 	
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
 tasks.named('test') {
 	useJUnitPlatform()
 }
